movie card grip spacing fixed.

--- a/assignment04/src/components/Card/Card.scss
+++ b/assignment04/src/components/Card/Card.scss
@@ -1,6 +1,6 @@
 .card-wrapper {
   width: 33%;
-  padding: 20px 20px 0 0;
+  padding: 30px 40px 0 0;
   color: #ffffff;
 
   .card-image-wrapper {
